// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heart renders correctly 1`] = `
<ThemeProvider
  theme={
    Object {
      "colors": Object {
        "black": "#4F4F4F",
        "border": "#BDBDBD",
        "buttonShadow1": "rgba(255, 255, 255, 0) ",
        "buttonShadow2": "rgba(249, 249, 249, 0.9)",
        "charcoal": "#333333",
        "darkGrey": "#8F8F8F",
        "darkShadow": "rgba(0,0,0,0.1)",
        "darkerGrey": "#828282",
        "error": "#DA2752",
        "gradientLeft": "#DA2752",
        "gradientRight": "#E935F8",
        "green": "#219653",
        "grey": "#A8A8A8",
        "inactiveText": "#ADADAD",
        "lightGrey": "#A0A0A0",
        "lightShadow": "rgba(0,0,0,0.16)",
        "offWhite": "#F9F9F9",
        "pureBlack": "#000000",
        "shadow": "rgba(0, 0, 0, 0.15)",
        "white": "#FFFFFF",
        "whiteGrey": "#E0E0E0",
      },
      "fonts": Object {
        "bodyText": "Avenir-Medium",
        "heading": "Montserrat-Bold",
        "title": "Avenir-Heavy",
      },
    }
  }
>
  <Heart
    active={true}
  >
    <Styled(_default)
      active={true}
      name="heart"
    >
      <StyledNativeComponent
        active={true}
        forwardedClass={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "displayName": "Styled(_default)",
            "inlineStyle": InlineStyle {
              "rules": Array [
                "
  color: ",
                [Function],
                ";
  font-size: 32px;
",
              ],
            },
            "render": [Function],
            "styledComponentId": "StyledNativeComponent",
            "target": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          }
        }
        forwardedRef={null}
        name="heart"
      >
        <_default
          active={true}
          name="heart"
          style={
            Array [
              Object {
                "color": "#DA2752",
                "fontSize": 32,
              },
            ]
          }
        >
          <Icon
            active={true}
            allowFontScaling={false}
            name="ios-heart"
            size={12}
            style={
              Array [
                Object {
                  "color": "#DA2752",
                  "fontSize": 32,
                },
              ]
            }
          >
            <Text
              active={true}
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#DA2752",
                      "fontSize": 32,
                    },
                  ],
                  Object {
                    "fontFamily": "Ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              <Text
                active={true}
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#DA2752",
                        "fontSize": 32,
                      },
                    ],
                    Object {
                      "fontFamily": "Ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </Text>
          </Icon>
        </_default>
      </StyledNativeComponent>
    </Styled(_default)>
  </Heart>
</ThemeProvider>
`;

exports[`Heart renders correctly 2`] = `
<ThemeProvider
  active={false}
  theme={
    Object {
      "colors": Object {
        "black": "#4F4F4F",
        "border": "#BDBDBD",
        "buttonShadow1": "rgba(255, 255, 255, 0) ",
        "buttonShadow2": "rgba(249, 249, 249, 0.9)",
        "charcoal": "#333333",
        "darkGrey": "#8F8F8F",
        "darkShadow": "rgba(0,0,0,0.1)",
        "darkerGrey": "#828282",
        "error": "#DA2752",
        "gradientLeft": "#DA2752",
        "gradientRight": "#E935F8",
        "green": "#219653",
        "grey": "#A8A8A8",
        "inactiveText": "#ADADAD",
        "lightGrey": "#A0A0A0",
        "lightShadow": "rgba(0,0,0,0.16)",
        "offWhite": "#F9F9F9",
        "pureBlack": "#000000",
        "shadow": "rgba(0, 0, 0, 0.15)",
        "white": "#FFFFFF",
        "whiteGrey": "#E0E0E0",
      },
      "fonts": Object {
        "bodyText": "Avenir-Medium",
        "heading": "Montserrat-Bold",
        "title": "Avenir-Heavy",
      },
    }
  }
>
  <Heart
    active={true}
  >
    <Styled(_default)
      active={true}
      name="heart"
    >
      <StyledNativeComponent
        active={true}
        forwardedClass={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "displayName": "Styled(_default)",
            "inlineStyle": InlineStyle {
              "rules": Array [
                "
  color: ",
                [Function],
                ";
  font-size: 32px;
",
              ],
            },
            "render": [Function],
            "styledComponentId": "StyledNativeComponent",
            "target": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          }
        }
        forwardedRef={null}
        name="heart"
      >
        <_default
          active={true}
          name="heart"
          style={
            Array [
              Object {
                "color": "#DA2752",
                "fontSize": 32,
              },
            ]
          }
        >
          <Icon
            active={true}
            allowFontScaling={false}
            name="ios-heart"
            size={12}
            style={
              Array [
                Object {
                  "color": "#DA2752",
                  "fontSize": 32,
                },
              ]
            }
          >
            <Text
              active={true}
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#DA2752",
                      "fontSize": 32,
                    },
                  ],
                  Object {
                    "fontFamily": "Ionicons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              <Text
                active={true}
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#DA2752",
                        "fontSize": 32,
                      },
                    ],
                    Object {
                      "fontFamily": "Ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </Text>
          </Icon>
        </_default>
      </StyledNativeComponent>
    </Styled(_default)>
  </Heart>
</ThemeProvider>
`;
